@@ -105,7 +105,6 @@
   * BT_EXILE_SKILLS
   * BT_EXILE_MW3STATS
   * BT_EXTENDED_ADVANTAGES
-  * BT_TARGCOMP_MODES
   * BT_FREETECHTIME
   * BT_MOVEMENT_MODES
   * BT_CARRIERS
